--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-keyboard-event-handler": "^1.4.1",
     "react-moment": "^0.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
