--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "react-moment": "^0.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-spring": "^8.0.4",
     "react-vis": "^1.11.6",
     "styled-components": "^4.1.3"
   },
